@@ -9,9 +9,14 @@ public class SimpleRedisLock implements ILock {
     private StringRedisTemplate stringRedisTemplate;
     private static final String KEY_PREFIX = "lock:";
 
+    public SimpleRedisLock(String name, StringRedisTemplate stringRedisTemplate) {
+        this.name = name;
+        this.stringRedisTemplate = stringRedisTemplate;
+    }
+
     @Override
     public boolean tryLock(long timeoutSec) {
-        long threadId = Thread.currentThread().threadId();
+        long threadId = Thread.currentThread().getId();
         Boolean success = stringRedisTemplate.opsForValue()
                 .setIfAbsent(KEY_PREFIX + name, threadId + "", timeoutSec, TimeUnit.SECONDS);
         return Boolean.TRUE.equals(success);
